# DS-MandatoryExercise

./: .gitignore  CMakeLists.txt  DS-MandatoryExercise2_Dependency-Graph.drawio  Makefile_tests  README.md  rpcStuff.x  run_tests.sh  server.c  todo.md
MandatoryExercise1/: keys.c
MandatoryExercises/Exercise1/: client.c  message.h
app/: CMakeLists.txt  client.c  example_server.c  rpc_client.c  rpc_server.c  server.c
apps/: client.c  server.c  test_dir.c
include/: dbms.h  dbmsUtils.h  keys.h  message.h  netUtils.h  utils.h
include/DS-MandatoryExercise/: example.h  netUtil.h  util.h  utils.h
include/dbms/: dbms.h  dbmsUtils.h
rpc/: rpc.x
rpcstuff/: Makefile.example  client  example.h  example.x  example_client.c  example_server.c  server
rpcstuff1/rpcstuff/: .example_client.c.kate-swp  example.x  example_client.c  example_clnt.c  example_server.c  example_svc.c  example_xdr.c
src/: CMakeLists.txt  client.c  dbms.c  dbmsUtils.c  example_client.c  keys.c  message.h  netUtil.c  netUtils.c  rpc_client.c  rpc_keys.c  server.c  util.c  utils.c
src/dbms/: CMakeLists.txt  dbms.c  dbmsUtil.c  dbmsUtils.c
src/rpc/: example_clnt.c  example_svc.c  example_xdr.c  rpc_clnt.c  rpc_svc.c  rpc_xdr.c
test/: CMakeLists.txt  dbmsUtils_tests.cpp  dbms_tests.c  dbms_tests.cpp  keys_tests.cpp  netUtils_tests.cpp  server_tests.cpp  str_to_num_tests.cpp  tests.c  utils_tests.cpp
tests/: db_tests.c
